k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advice-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: advice-app
  template:
    metadata:
      labels:
        app: advice-app
    spec:
      containers:
      - name: advice-app
        image: nandkishor986/advice_app:latest
        ports:
        - containerPort: 80
