k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: advice-app-service
spec:
  selector:
    app: advice-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
